# Tomm-I

./: .gitignore  README.md
DDPG/: Agent.py  buffer.py  env.py  main.py  networks.py
DDPG/tmp/ddpg/: critic_ddpg.h5  target_critic_ddpg.h5
DDPG/tmp/ddpg/old_models_3Leg/: actor_ddpg.h5  critic_ddpg.h5  target_actor_ddpg.h5  target_critic_ddpg.h5
Tomm-I-sim/: CMakeLists.txt  Leg.h  README.md  RL_sim-v2.py  RL_sim-v3.py  RL_sim.py  RobotGeom.h  Tomm-I-sim.cc  Tomm-I-sim.h  action.cc  action.hpp  example.py  example2.py  main.cc  pymod.cc  test.py  texturepath.h
Tomm-I-v2/: README.md
Tomm-I-v2/Calibrate/: Tomm-I-calibrate.py
Tomm-I-v2/Controller/: CMakeLists.txt  Tomm-I-calibrate.py  Tomm-I-controller.py  calibration.json  test2.py
Tomm-I-v2/Firmware/src/: main.cpp
Tomm-I-v2/Monitor/: RobotStatus
Tomm-I-v2/OLED_status_display/: GUI.py  display_update.py
Tomm-I-v2/OLED_status_display/arduino_state/: arduino_state.ino
Tomm-I-v2/Utils/: legtool.py  servos_off.py  test_blinka.py
Tomm-I-v2/robot_statusd/: robot_statusd.crontab  robot_statusd.py
docs/: HOWTO_initializeSD.md
